--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -276,8 +276,8 @@ video {
   z-index: 100;
   position: fixed;
   left: 0;
-
   margin: 0;
+
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -415,7 +415,15 @@ video {
   display: none;
 }
 
+@media only screen and (max-width: 00px) {
 
+  body {
+  
+  background-color: lightblue;
+  
+  }
+  
+}
 
 /*Landing*/
 
@@ -471,10 +479,10 @@ video {
 
 .circlebg {
   position: absolute;
-  top: -50px;
+  top: -80px;
   right: -280px;
-  width: 900px;
-  height: 900px;
+  width: 60vw;
+  height: 55vw;
   border-radius: 40%;
   transform: rotatez(45deg);
   background-color: var(--fifth-color);
@@ -590,13 +598,13 @@ video {
   position: absolute;
   top: 30px;
   left: 0px;
-  width: 670px;
-  height: 700px;
+  width: 90vh;
+  height: 45vw;
   border-radius: 0 20% 10% 0;
   transform: rotatez(5deg);
-  background-color: var(--fifth-color);
+  background-color: #7d7d7d;
   opacity: .15;
-  z-index: 0;
+  z-index: 10;
 }
 
 .nosotros__descripcion {
@@ -736,9 +744,8 @@ video {
   }
 }
 
+
 /*Planes*/
-
-
 
 .planes {
   position: relative;
@@ -755,8 +762,8 @@ video {
 
 .circlebg--1 {
   right: -180px;
-  width: 800px;
-  height: 800px;
+  width: 50vw;
+  height: 50vw;
   animation: ungrowth;
   animation-duration: 10s;
   animation-iteration-count: infinite;
@@ -765,8 +772,8 @@ video {
 .circlebg--2 {
   left: 100px;
   bottom: 70px;
-  width: 400px;
-  height: 400px;
+  width: 35vw;
+  height: 35vw;
   animation: growth;
   animation-duration: 10s;
   animation-iteration-count: infinite;
@@ -841,7 +848,6 @@ video {
   background-color: var(--second-color);
   width: 400px;
   height: 260px;
-  /* opacity: .2; */
   border-radius: 50%;
   transition: all .2s linear;
 }
@@ -915,15 +921,15 @@ video {
 
 @keyframes growth {
   50% {
-    width: 600px;
-    height: 600px;
+    width: 50vw;
+    height: 50vw;
   }
 }
 
 @keyframes ungrowth {
   50% {
-    width: 600px;
-    height: 600px;
+    width: 45vw;
+    height: 45vw;
   }
 }
 
